@@ -1,5 +1,8 @@
 XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Add file to the recent files list at the time of closing a tab as well
+  (not only at the time of opening). Otherwise a file is not there when it
+  was loaded from a command line and then its tab is closed.
 * Do not loose the current editor position when there was an incremental
   search on a tab and then another tab is closed.
 * Prevent loosing selection in case switching between history positions
